# PainPlatformer

./: .gitignore  CMakeLists.txt  LICENSE.MD  README.MD  build-deps-arch.sh  build-deps-deb.sh  build-deps.ps1
Game/: CMakeLists.txt
Game/src/: BaseObject.h  EngineMetadata.py  EngineTypes.h  EventHandler.cpp  EventHandler.h  Game.cpp  Game.h  PainObject.cpp  PainObject.h  Player.cpp  Player.h  TextureManager.cpp  TextureManager.h  Vector2D.h  game.rc  main.cpp
